Add verified public key link

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
           </a>
         </div>
 
+        <div class="list">
+          <label>Verified public key (PGP)</label> 
+          <a href="https://keybase.io/g3wanghc"> 
+            <i class="fa fa-key"> </i>
+            Keybase
+          </a>
+        </div>
+
       </section>
     </div>    
   </body>
