Color and allignment changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       
       <section>
         <h3>
-          g3wanghc is <i>usually</i> around <a href="https://www.google.ca/maps/place/Bahen+Centre+for+Information+Technology">Bahen</a>
+          g3wanghc is <c>usually</c> around <a href="https://www.google.ca/maps/place/Bahen+Centre+for+Information+Technology">Bahen</a>
         </h3>
 
         <div class="list">
