Add Devpost link

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
             <i class="fa fa-github"></i> 
             GitHub
           </a>
+          <a href="http://devpost.com/g3wanghc">
+            <i class="fa fa-chevron-circle-right"></i> 
+            Devpost
+          </a>
           <a href="https://ca.linkedin.com/in/hanchen-wang-64a3309a">
             <i class="fa fa-linkedin"> </i>
             Linkedin
