--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             <i class="fa fa fa-file-text"> </i>
             Resum&eacute;
           </a>
+          <br>
+          <label>  It's not a bug; it's an undocumented feature! </label>
+
         </div>
       </section>
     </div>    
