--- a/uoft_alert/user/app.html
+++ b/uoft_alert/user/app.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 
 <html>
-	
 	<!-- info about webpage-->
 	<head>
 		<title>UofT Alerts</title>
 		<link rel="stylesheet" href="./app.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	</head>
 	
 	<body>
-		<div id='title'>UofT Alerts Viewer</div>
+		<div id='title'>UofT Alerts</div>
 		<div id='status_clear'>(Emergency Clear)</div>
-		<div id='status_progress'>(Emergency In Progress)</div>
+		<div id='status_progress'>Emergency In Progress</div>
 		
 		<div style="text-align: center">
 			<div id='alert_date_container' style="text-align: center">
@@ -25,7 +25,7 @@
 			</div>
 		</div>
 
-		<div id='situation_map'><img src="./map.png" alt="Mountain View" style="width:20px;height:20px;">Situation Map (Bahen Centre)</div>
+		<div id='situation_map'><img src="./map.png" alt="Mountain View">Situation Map (Bahen Centre)</div>
 
 
 		<div id='map'>
@@ -34,7 +34,7 @@
 		</div>
 		
 		<div id= description_container>
-			<div id='description_label'><img src="./list.png" alt="Mountain View" style="width:25px;height:25px;">Description</div>
+			<div id='description_label'><img src="./list.png" alt="Mountain View">Description</div>
 			<div id='description_text'>There is a gunman between St. George, Huron, Russell and College Streets. Please evacuate this area by making your way to an area deemed safe, that is outside of the affected area, which is highlighted in red in the map.</div>
 		</div>
 	</body>
