--- a/uoft_alert/user/home.html
+++ b/uoft_alert/user/home.html
@@ -10,8 +10,8 @@
 
 	<body>
 		<div id="rcorners">
-			<div id="title1" style="text-align: center; font-weight: bold; font-size: 15pt; margin-bottom: 5px;">UofT Alerts</div>
-			<div id="title2" style="text-align: center; font-weight: bold; color: red; margin-bottom: 5px;">EMERGANCY ALERT</div>
+			<div id="title1" style="text-align: center; font-weight: bold; font-size: 15pt; margin-bottom: 5px; color:navy">UofT Alerts</div>
+			<div id="title2" style="text-align: center; font-weight: bold; color: red; margin-bottom: 5px;">EMERGENCY ALERT</div>
 			<div id="title3" style="font-weight: bold; margin-bottom: 20px;">You're in the affected area</div>
 			<button onclick="document.getElementById('rcorners').remove();">Dismiss</button>
 			<a href="app.html"><button>View Info</button> </a>
