Mobile app style update to match the admin site

--- a/uoft_alert/user/app.html
+++ b/uoft_alert/user/app.html
@@ -12,7 +12,7 @@
 	<body>
 		<div id='title'>UofT Alerts</div>
 		<div id='status_clear'>(Emergency Clear)</div>
-		<div id='status_progress'>Emergency In Progress</div>
+		<div id='status_progress'>Armed Suspect - Critical</div>
 		
 		<div style="text-align: center">
 			<div id='alert_date_container' style="text-align: center">
@@ -35,7 +35,12 @@
 		
 		<div id= description_container>
 			<div id='description_label'><img src="./list.png" alt="Mountain View">Description</div>
-			<div id='description_text'>There is a gunman between St. George, Huron, Russell and College Streets. Please evacuate this area by making your way to an area deemed safe, that is outside of the affected area, which is highlighted in red in the map.</div>
+			<div id='description_text'>
+				<label>Unidentified armed individual on Campus</label><br>
+				<p>
+				There is a gunman between St. George, Huron, Russell and College Streets. Please evacuate this area by making your way to an area deemed safe, that is outside of the affected area, which is highlighted in red in the map.
+				</p>
+			</div>
 		</div>
 	</body>
 </html>
