--- a/uoft_alert/user/home.html
+++ b/uoft_alert/user/home.html
@@ -11,9 +11,9 @@
 	<body>
 		<div id="rcorners">
 			<div id="title1" style="text-align: center; font-weight: bold; font-size: 15pt; margin-bottom: 5px; color:navy">UofT Alerts</div>
-			<div id="title2" style="text-align: center; font-weight: bold; color: red; margin-bottom: 5px;">EMERGENCY ALERT</div>
-			<div id="title3" style="font-weight: bold; margin-bottom: 20px;">You're in the affected area</div>
-			<button onclick="document.getElementById('rcorners').remove();">Dismiss</button>
+			<div id="title2" style="text-align: center; color: red; margin-bottom: 5px;">EMERGENCY ALERT</div>
+			<div id="title3" style="margin-bottom: 20px; text-align:center;">You're in the affected area</div>
+			<button onclick="document.getElementById('rcorners').remove();" style="margin-right:12px;">Dismiss</button>
 			<a href="app.html"><button>View Info</button> </a>
 		</div>
 	</body>
