--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             Resum&eacute;
           </a>
           <br>
-          <label>  It's not a bug; it's an undocumented feature! </label>
+          <label> If you can't find it, its not a real bug. </label>
 
         </div>
       </section>
