update: May 11, 2017 - remove CSSU position

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="intro">
       <header>
         <h1> Hanchen Wang</h1>
-        <h3> President of the CSSU </h3>
+        <h3> Student at UofT </h3>
 
         <h3> 
           (Hon) Bachelor of Science <br>
