--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             Resum&eacute;
           </a>
           <br>
-          <label> Its not a bug if there’s no documentation that states it should behave otherwise. </label>
+          <label> Its not a bug unless there's documentation that states it should behave otherwise. </label>
 
         </div>
       </section>
