--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <h3> 
           (Hon) Bachelor of Science <br>
           Computer Science Specialist</br>
-          Cognitive Science Major 
         </h3>
 
         <h3>
@@ -24,7 +23,7 @@
           Innis College</br>
         </h3>
         
-        <h4> Expected graduation May 2018 </h4>
+        <h4> Graduating June 2018 </h4>
       </header>
       
       <section>
