update student status

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <div class="intro">
       <header>
         <h1> Hanchen Wang</h1>
-        <h3> Student at UofT </h3>
 
         <h3> 
           (Hon) Bachelor of Science <br>
@@ -33,7 +32,7 @@
 
         <div class="list">
           <label>Email </label>
-          <a>hanchen.wang &lt;at&gt; mail.utoronto.ca</a>
+          <a>hanchen.wang &lt;at&gt; gmail.com</a>
         </div>
 
         <div class="list">
@@ -41,10 +40,6 @@
           <a href="https://github.com/g3wanghc">
             <i class="fa fa-github"></i> 
             GitHub
-          </a>
-          <a href="http://devpost.com/g3wanghc">
-            <i class="fa fa-chevron-circle-right"></i> 
-            Devpost
           </a>
           <a href="https://ca.linkedin.com/in/hanchen-wang-64a3309a">
             <i class="fa fa-linkedin"> </i>
