update linkedin profile url

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <i class="fa fa-github"></i> 
             GitHub
           </a>
-          <a href="https://ca.linkedin.com/in/hanchen-wang-64a3309a">
+          <a href="https://ca.linkedin.com/in/hanchendev">
             <i class="fa fa-linkedin"> </i>
             Linkedin
           </a>
