--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <i class="fa fa-facebook-square"> </i>
             Facebook
           </a>
-          <a href="/hanchen.wang.pdf">
+          <a href="https://docs.google.com/document/d/1bTSJQnsah9_j53X1vrU6efLM70xv7U1WBCHhl8cPi6k/edit?usp=sharing" target="_blank">
             <i class="fa fa fa-file-text"> </i>
             Resum&eacute;
           </a>
