--- a/index.html
+++ b/index.html
@@ -13,21 +13,14 @@
         <h1> Hanchen Wang</h1>
 
         <h3> 
-          (Hon) Bachelor of Science <br>
-          Computer Science Specialist</br>
+          Software Engineer @ Uber
         </h3>
 
-        <h3>
-          University of Toronto </br> 
-          Innis College</br>
-        </h3>
-        
-        <h4> Graduating June 2018 </h4>
       </header>
       
       <section>
         <h3>
-          g3wanghc is <c>usually</c> around <a href="https://www.google.ca/maps/place/Bahen+Centre+for+Information+Technology">Bahen</a>
+          g3wanghc is usually around San Francisco or Berkeley /a>
         </h3>
 
         <div class="list">
