new job at apple

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1> Hanchen Wang</h1>
 
         <h3> 
-          Software Engineer @ Uber
+          Software Engineer @ Apple, ex. Uber
         </h3>
 
         <div class="list">
